# StellarHydra

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.yaml
docs/: PRD.md  README.md  ROADMAP.md  activity-log.md
docs/api/: admin-api.md  authentication.md  cli-reference.md  middleware-and-lifecycle.md
docs/architecture/: agents.md  cycle-finalization.md  hydra_graph_planned.mmd  langgraph-checkpointing.md  langgraph-command-routing.md  langgraph-workflow.md  overview.md  predictor-stress-scoring.md  sentiment-stub.md  state-model.md  state-reducers.md  strategist-decision-rules.md
docs/configuration/: env-vars.md  settings-yaml.md
docs/decisions/: 001-drips-wave-api-oq1.md
docs/deploy/: render.md
docs/deployment/: docker-compose.md  dockerfile.md
docs/development/: SETUP.md  testing.md
docs/integrations/: drips-client.md  drips-request-contract.md  redis-signal-cache.md  signal-cache-write-policy.md  stellarroute-client.md  stellarroute-resilience.md  stellarroute-response-parsing.md
docs/observability/: metrics-and-logging.md  opentelemetry-setup.md  prometheus-reference.md
docs/outreach/: drips-wave-maintainer-runbook.md
docs/reference/: data-models.md
scripts/: run_cycle.py
tests/: test_api.py  test_drips_client.py  test_executor.py  test_graph.py  test_hitl.py  test_kill_switch.py  test_predictor.py  test_signal_cache.py  test_stellarroute_client.py  test_strategist.py  test_workers.py
(+40 files in other folders)
