# StellarHydra package metadata and tool configuration.
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stellarhydra"
version = "0.1.0"
description = "Agentic Liquidity Balancer for Stellar DEX routing (StellarRoute companion)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "StellarRoute", email = "dev@stellarroute.io" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "redis>=5.0",
    "celery>=5.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "prometheus-client>=0.20",
    "structlog>=24.1",
    "tenacity>=8.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "httpx",
    "respx>=0.21",
]

[project.scripts]
stellarhydra-cycle = "stellarhydra.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
